frontend/css/stylesheet.css
@font-face {
    font-family: "Hack";
    src: url('../css/font/hack/ttf/Hack-Regular.ttf') format("truetype");
}

:root {
    --background-color: black;
    --color: lime;
}

* {
    font-size: 100%;
    font-family: 'Hack', sans-serif;
}

body {
    color: var(--color);
    background-color: var(--background-color);
}

::-webkit-scrollbar {
    height: 5px;
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background-color: var(--color);
    border-radius: 15px;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 1em;
}

ul,li {
    list-style: none;
    padding: 0;
    margin: 0;
}

/* ERROR */

.error {
    font-style: italic;
    text-align: center;
    font-size: 12px;
    color: red;
}

/* LAYOUT */

.layout {
    height: calc(100vh - 10vh - 2rem);
    display:flex;
}

/* BUTTON */

.button {
    height: 30px;
    border: 2px solid;
    border-color: var(--color);
    color: var(--color);
    background-color: var(--background-color);
    padding: 0 1rem;
    border-radius: 2rem;
    margin: 0;
    margin-left: 0.75rem;
    outline: none;
}

.button:hover {
    box-shadow: 0px 0px 20px var(--color);
}

/* INPUT */

.input {
    width: 100%;
    border-radius: 2rem;
    border:  2px solid;
    padding: 0 1rem;
    color: var(--color);
    border-color: var(--color);
    background-color: var(--background-color);
}

.input:focus {
    box-shadow: 0px 0px 20px var(--color);
    outline: none;
}

.input::placeholder {
    color: var(--color);
    opacity: 0.5;
}

/* FORM */
.form {
    display: flex;
    padding: 1.25rem 0.5rem;
}

/* LOGIN && REGISTER */

.card {
    border: solid;
    width: 25%;
    padding: 1.5rem;
    margin: auto;
    margin-top: 25vh;
    border-radius: 1rem;
}

.card__input {
    width: auto;
    height: auto;
    border-radius: 2rem;
    border: solid;
    padding: 0 1rem;
    margin-bottom: 0.5rem;
    display:block;
}

.card__button {
    margin-left: 0rem;
}

/* HEADER  */

.header {
    display:flex;
    height: 10vh;
    padding: 0 1rem;
    align-items: center;
    justify-content: space-between;
    border: 2px solid;
}

.header__names {
    display: flex;
    padding: 0;
    justify-content:space-between;
    background: transparent;
}

.header-section {
    border-bottom: 2px solid;
    text-align: center;
    margin: auto;
    padding: 0.75rem;
    font-size: 24px;
}

/* ROOM */

.room {
    min-width: 250px;
    max-width: 250px;
    border: 2px solid;
    border-top: 0;
    overflow: hidden;
}

.room__ul {
    height: 84%;
    overflow-y: auto;
    margin-right: 2px;
}

.room__btn {
    padding: 0.25rem 1rem;
    display: block;
    width: calc(100% - 1rem);
    text-align: left;
    border-radius: 8px;
    margin: 0.25rem 0.5rem;
    word-break: break-all;
    color: var(--color);
    background-color: var(--background-color);
}

.room__btn:hover {
    box-shadow: 0px 0px 20px var(--color);
}

.room__btn--active {
    background-color: var(--color);
    color: var(--background-color);
}

/* CHAT */

.chat {
    width: 100%;
    flex-direction: column;
    justify-content: flex-end;
    position: relative;
    padding: 1rem;
    border: 2px solid;
    border-top: 0;
    border-left: 0;
}

.chat__li {
    word-break: break-all;
}

.chat__li--join {
    font-style: italic;
    text-align: center;
    font-size: 12px;
}

.chat__ul {
    overflow: hidden;
    overflow-y: auto;
    position: absolute;
    top: 2px;
    bottom: 48px;
    left: 0;
    right: 2px;
    padding: 2rem;
}

.chat__form {
    position: absolute;
    bottom: 2px;
    left: 0;
    right: 0;
    padding: 0.50rem 1rem;
}

/* These are the ul inside each message */
.notMyMessage, .myMessage {
    width: max-content;
    max-width: 50%;
    margin: .25rem auto;
    padding: .25rem 1rem;
    border: 1px solid;
    border-radius: .5rem;
}

.notMyMessage {
    margin-left: 0;
    text-align: left;
    background-color: var(--background-color);
    color: var(--color);
}

.myMessage {
    margin-right: 0;
    text-align: right;
    margin-top: 1rem;
    background-color: var(--color);
}

.myMessage li {
    background-color: var(--color);
    color: var(--background-color);
}

/* USERS */

.user {
    min-width: 250px;
    max-width: 250px;
    overflow: hidden;
    border: 2px solid;
    border-top: 0;
    border-left: 0;
}

.user__ul {
    height: 90%;
    overflow-y: auto;
    padding: 1rem;
    margin-right: 2px;
}

.user__li {
    padding: 0.25rem 1rem;
    word-break: break-all;
}

/* MEDIA QUERIES */

/* @media (max-width: 1000px) {

    .room {
        max-width: unset;
        width: 100vh;
    }

    .user {
        display: none;
    }
} */

